syntax="proto3";

package com.poker.protocols.game.proto; 

import "src/com/poker/protocols/game/proto/GameUser.proto";

option java_package = "com.poker.protocols.game";
option java_outer_classname = "UserLoginProto";

message UserLogin{
	int32  seatId        	= 1;
	repeated GameUser users = 2;   
}

// protoc_3.5.1 --java_out=./src ./src/com/poker/protocols/game/proto/UserLogin.proto ./src/com/poker/protocols/game/proto/GameUser.proto 